# embedded-text

./: .gitignore  Cargo.toml  README.md
crates/embedded-bitmap-font/: Cargo.toml
crates/embedded-bitmap-font-codegen/: Cargo.toml
crates/embedded-bitmap-font-codegen/src/: lib.rs
crates/embedded-bitmap-font-codegen/tests/: writer.rs
crates/embedded-bitmap-font-macros/: Cargo.toml
crates/embedded-bitmap-font-macros/src/: emit.rs  lib.rs
crates/embedded-bitmap-font-macros/tests/: font_macro.rs
crates/embedded-bitmap-font-macros/tests/ui/: bitmap_font_type_alias_removed_fail.rs  bitmap_font_type_alias_removed_fail.stderr  font_data_duplicate_index_fail.rs  font_data_duplicate_index_fail.stderr  font_data_multi_font_pass.rs  font_macro_multi_size_pass.rs  font_macro_pass.rs  font_macro_ranges_pass.rs  old_bitmap_font_removed_fail.rs  old_bitmap_font_removed_fail.stderr  old_bitmap_fonts_removed_fail.rs  old_bitmap_fonts_removed_fail.stderr
crates/embedded-bitmap-font/examples/: drawable_text_demo.rs
crates/embedded-bitmap-font/src/: debug.rs  lib.rs  style.rs  text.rs
crates/embedded-bitmap-font/tests/: debug.rs  runtime.rs
crates/embedded-bitmap-font/tests/ui/: drawable_text_mismatched_cell_heights_fail.rs  drawable_text_mismatched_cell_heights_fail.stderr
docs/: target-model.md
embedded-bitmap-text/: Cargo.toml  README.md
embedded-bitmap-text-macros/: Cargo.toml  README.md
embedded-bitmap-text-macros/src/: emit.rs  input.rs  raster.rs
embedded-bitmap-text-macros/tests/ui/: bitmap_font_type_alias_removed_fail.rs  bitmap_font_type_alias_removed_fail.stderr  font_data_duplicate_index_fail.rs  font_data_duplicate_index_fail.stderr  old_bitmap_font_removed_fail.rs  old_bitmap_font_removed_fail.stderr  old_bitmap_fonts_removed_fail.rs  old_bitmap_fonts_removed_fail.stderr
embedded-bitmap-text/src/: debug.rs  font.rs  layout.rs  lib.rs  style.rs  text.rs
embedded-bitmap-text/tests/: compile_fail.rs  debug.rs  runtime.rs
embedded-bitmap-text/tests/ui/: drawable_text_mismatched_cell_heights_fail.rs  drawable_text_mismatched_cell_heights_fail.stderr
glyph-cell/: Cargo.toml  README.md
glyph-cell-macros/: Cargo.toml  README.md
glyph-cell-macros/src/: emit.rs  lib.rs  source.rs
glyph-cell-macros/tests/ui/: bitmap_font_type_alias_removed_fail.rs  bitmap_font_type_alias_removed_fail.stderr  font_data_duplicate_index_fail.rs  old_bitmap_font_removed_fail.rs  old_bitmap_font_removed_fail.stderr  old_bitmap_fonts_removed_fail.rs  old_bitmap_fonts_removed_fail.stderr
glyph-cell/src/: debug.rs  layout.rs  lib.rs  style.rs  text.rs
glyph-cell/tests/: debug.rs  runtime.rs
glyph-cell/tests/ui/: drawable_text_mismatched_cell_heights_fail.rs  drawable_text_mismatched_cell_heights_fail.stderr
