[package]
name = "embedded-bitmap-text-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "procedural macros for embedding bitmap text fonts"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
fontdue = "0.9"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
embedded-bitmap-text = { path = "../embedded-bitmap-text" }
trybuild = "1"
