[package]
name = "glyph-cell"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "no_std bitmap text rendering for embedded-graphics"
readme = "README.md"

[dependencies]
embedded-graphics-core = "0.4"
glyph-cell-macros = { path = "../glyph-cell-macros" }

[features]
debug = []

[dev-dependencies]
embedded-graphics = "0.8"
